--- a/src/components/SubNavBar/subnavbar.module.css
+++ b/src/components/SubNavBar/subnavbar.module.css
@@ -1,12 +1,11 @@
 .navbar {
-    background-color: #333131cb;
+    background-color: #a70808cb;
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    gap: 5rem;
+    justify-content: center;
     box-shadow: 0px 10px 10px -6px #d80000;
     border-radius: .6rem;
-    
+    width: 1000px;    
   }
   
   @media (max-width: 768px) {
