--- a/src/components/SubNavBar/subnavbar.module.css
+++ b/src/components/SubNavBar/subnavbar.module.css
@@ -5,7 +5,7 @@
     justify-content: center;
     box-shadow: 0px 10px 10px -6px #d80000;
     border-radius: .6rem;
-    width: 10000px;    
+    width: auto;    
   }
   
   @media (max-width: 768px) {
