--- a/src/components/Card/card.module.css
+++ b/src/components/Card/card.module.css
@@ -12,6 +12,12 @@ border-radius: 1rem;
     height: 320px;
 }
 
+.minibox:hover{
+    cursor: pointer;
+    color: rgb(255, 255, 255);
+    background-color: #000000;
+
+}
 .title {
     font-size: 24px;
     margin: 0;
