--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 .fondo{
-    background-image: url(https://wallpaperaccess.com/full/7446.jpg);
+    background-color:rgba(0, 0, 0, 0.952) ;
     color: rgb(0, 0, 0);
     width: 100%;
     height: 100vh;
