--- a/src/components/Card/card.module.css
+++ b/src/components/Card/card.module.css
@@ -1,15 +1,15 @@
 .minibox{
-    padding: 1.5rem;
-border-radius: 1rem;
+
+    border-radius: 1rem;
     background-color: rgba(117, 2, 2, 0.781);
     box-shadow: 0 8px 32px 0 rgba(130, 130, 130, 0.37);
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: rgb(197, 191, 183);
     overflow: hidden;
     border: 1px solid black;
-    width: 350px;
+    width: 1000px;
     /* width: 1000px; */
-    height: 320px;
+    height: 150px;
 }
 
 .minibox:hover{
@@ -19,6 +19,11 @@ border-radius: 1rem;
 
 }
 .title {
-    font-size: 24px;
+    font-size: 15px;
     margin: 0;
 }
+.containerizquierda {
+    float: left;
+    width: 25%; /* Ajusta el ancho según tus necesidades */
+    margin-right: 10px; /* Agrega margen a la derecha del contenedor */
+  }
