--- a/src/components/FormGames/FormGames.module.css
+++ b/src/components/FormGames/FormGames.module.css
@@ -1,5 +1,5 @@
 .fondo2{
-    background-image: url(https://wallpaperaccess.com/full/5927911.gif);
+background-image: url(https://p4.wallpaperbetter.com/wallpaper/709/31/637/firewatch-dark-night-minimalism-videogame-hd-wallpaper-preview.jpg);
     color: rgb(0, 0, 0);
     width: 100%;
     height: 100vh;
@@ -28,8 +28,9 @@
 
 .minibox{
     padding: 1.5rem;
+    color: azure;
 border-radius: 1rem;
-    background-color: rgba(172, 28, 28, 0.4);
+    background-color: rgba(92, 3, 3, 0.87);
     box-shadow: 0 8px 32px 0 rgba(130, 130, 130, 0.37);
     width: auto;
     margin: 4rem auto;
