--- a/src/components/Card/card.module.css
+++ b/src/components/Card/card.module.css
@@ -32,11 +32,10 @@
     background-color: #2b2b2b;
     color: aliceblue;
     float: right;
-    width: 10%; /* Ajusta el ancho según tus necesidades */
+    width: 150px; /* Ajusta el ancho según tus necesidades */
     margin-right: 10px; 
-    margin-top: 100px;
     border-radius: 20%;
-    padding: 5px;
+    padding: auto;
     border: 0;
 }
 
