--- a/src/components/CoinBuyer/CoinBuyer.module.css
+++ b/src/components/CoinBuyer/CoinBuyer.module.css
@@ -1,10 +1,22 @@
 .CardElement {
-    height: 50px;
-    border: 1px solid white;
+    border: 1px solid black;
     color: white;
 }
 
 .container {
     background-color: white;
     width: 50%;
+    border-radius: 10px;
+    padding: 30px;
+    margin-top: 10%;
+}
+
+
+.inp {
+    margin: 10px;
+}
+
+button{
+    margin: 10px;
+    margin-left: 43% ;
 }
