--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,3 +1,53 @@
-.container {
-  background-color: white;
+
+.fondo2{
+  background-image: url(https://p4.wallpaperbetter.com/wallpaper/709/31/637/firewatch-dark-night-minimalism-videogame-hd-wallpaper-preview.jpg);
+      color: rgb(0, 0, 0);
+      width: 100%;
+      height: 100vh;
+      background-size: cover;
+      background-position: center;
+      position: absolute;
+      top:0;
+      left:0;
+      size: contain;
+      perspective: 1px;
+      height: 100vh;
+      overflow-x: hidden;
+      overflow-y: auto;
+  }
+
+  .Card_Box {
+    padding: 1.5rem;
+    border-radius: 1rem;
+    background-color: rgba(255, 255, 255, 0.4);
+    box-shadow: 0 8px 32px 0 rgba(161, 92, 92, 0.37);
+    backdrop-filter: blur(2px);
+    width: 300px;
+    height: 400px;
+    transition: .5s;
+}
+
+.Card_Box:hover {
+    transform: scale(1.08);
+}
+
+
+.Card__Name {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: black;
+    text-decoration: none;
+}
+
+.Card__Img {
+    max-width: 100%;
+    height: 200px;
+}
+
+.Card__Continent{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: black;
+    font-size: 20px;
+    background-color: rgba(105, 104, 104, 0.712);
+    border-radius: .6rem;
+    padding: .3rem 1rem;
 }
