--- a/src/components/CoinBuyer/CoinBuyer.module.css
+++ b/src/components/CoinBuyer/CoinBuyer.module.css
@@ -1,23 +1,6 @@
-.CardElement {
-    border: 1px solid black;
-    color: white;
-    margin: 5px;
-}
-
 .container {
-    background-color: white;
+    border: 1px solid white;
     width: 50%;
-    border-radius: 10px;
-    padding: 30px;
-    margin-top: 10%;
+    padding: 10px;
+    background-color: aqua;
 }
-
-
-.inp {
-    margin: 10px;
-}
-
-/* button{
-    margin: 10px;
-    margin-left: 43% ;
-} */
