coinBuyer Validaciones y css

--- a/src/components/CoinBuyer/CoinBuyer.module.css
+++ b/src/components/CoinBuyer/CoinBuyer.module.css
@@ -1,6 +1,19 @@
 .container {
     border: 1px solid white;
-    width: 50%;
-    padding: 10px;
-    background-color: aqua;
+    width: 30%;
+    padding: 1%;
+    background-color: rgba(79, 77, 77, 0.3);
+    margin-top: 10%;
+    margin-left: 35%;
+    color: white;
+    border-radius: 10px;
+}
+
+.btn {
+    margin: 20px;
+}
+
+.inp {
+    height: 40px;
+    border-radius: 7px;
 }
