--- a/src/components/Favorites/favorites.module.css
+++ b/src/components/Favorites/favorites.module.css
@@ -36,3 +36,11 @@ border-radius: 1rem;
     margin: 4rem auto;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+
+.conditionalDiv {
+    background-color: rgba(255, 255, 255, 0.4);
+    border-radius: 1rem;
+    width: fit-content;
+    padding: 2%;
+    margin-left: 40%;
+}
