--- a/src/components/DashBoard/DashBoard.module.css
+++ b/src/components/DashBoard/DashBoard.module.css
@@ -1,3 +1,10 @@
 .container {
-    border: 1px solid white;
+    border: 1px solid red;
+    background-color: white;
+    border-radius: 10px;
+    margin: 1%;
+}
+
+.title {
+    font-size: 3rem;
 }
