--- a/src/components/DashBoard/DashBoardComponents/AllUsers/AllUsers.module.css
+++ b/src/components/DashBoard/DashBoardComponents/AllUsers/AllUsers.module.css
@@ -1,3 +1,7 @@
-.contianer {
+.container {
     border: 1px solid black;
+    border-radius: 10px;
+    width: fit-content;
+    margin: 1%;
+    padding: 1%;
 }
