--- a/src/components/DashBoard/DashBoardComponents/Perfil/Perfil.module.css
+++ b/src/components/DashBoard/DashBoardComponents/Perfil/Perfil.module.css
@@ -3,4 +3,9 @@
     padding: 1%;
     border: 1px solid black;
     border-radius: 10px;
+    width: fit-content;
+}
+
+.pencil {
+    width: 20px;
 }
