--- a/src/components/DashBoard/DashBoardComponents/AllUsers/AllUsers.module.css
+++ b/src/components/DashBoard/DashBoardComponents/AllUsers/AllUsers.module.css
@@ -1,7 +1,20 @@
 .container {
     border: 1px solid black;
     border-radius: 10px;
-    width: fit-content;
     margin: 1%;
     padding: 1%;
+    width: 100%;
+}
+
+.selectBox {
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    
+}
+
+.selectItem {
+    padding: 1px;
+    height: fit-content;
+    margin: 1px;
 }
