--- a/src/components/DashBoard/DashBoardComponents/AllUsers/AllUsers.module.css
+++ b/src/components/DashBoard/DashBoardComponents/AllUsers/AllUsers.module.css
@@ -17,3 +17,9 @@
     height: fit-content;
     margin: 1px;
 }
+
+.titlebox {
+    padding: 1%;
+    display: flex;
+    justify-content: space-around;
+}
