--- a/src/components/DashBoard/DashBoardComponents/AllUsers/AllUsers.module.css
+++ b/src/components/DashBoard/DashBoardComponents/AllUsers/AllUsers.module.css
@@ -1,8 +1,9 @@
 .container {
-    border: 1px solid black;
+    border: 4px solid black;
     border-radius: 10px;
     margin: 1%;
-    padding: 1%;
+    padding: 0.5%;
+    color: aliceblue;
 }
 
 .selectBox {
