--- a/src/components/DashBoard/DashBoardComponents/GamesComment/GamesComment.module.css
+++ b/src/components/DashBoard/DashBoardComponents/GamesComment/GamesComment.module.css
@@ -1,9 +1,12 @@
 .container {
-    border: 1px solid red;
-    border-radius: 10px;
-    width: 50%;
-    padding: .5%;
+    border: 4px solid green;
+    width: fit-content;
     margin: 1%;
+    padding: 1%;
+    height: fit-content;
+    border-radius: 10px;
+    color: black;
+    background-color: rgb(197, 193, 193);
 }
 
 .commentsBox {
