--- a/src/components/DashBoard/DashBoardComponents/TableGamesToSell/TableGamesToSell.module.css
+++ b/src/components/DashBoard/DashBoardComponents/TableGamesToSell/TableGamesToSell.module.css
@@ -1,8 +1,10 @@
 .container {
-    border: 1px solid green;
+    border: 4px solid green;
     width: fit-content;
-    margin: 1%;
-    padding: 1%;
+    margin: auto;
+    padding: auto;
     height: fit-content;
     border-radius: 10px;
+    color: black;
+    background-color: rgb(197, 193, 193);
 }
