--- a/src/components/DashBoard/TableUserGames/TableUserGames.module.css
+++ b/src/components/DashBoard/TableUserGames/TableUserGames.module.css
@@ -2,8 +2,16 @@
 }
 
 .imagee {
-  padding: 3px;
-  margin: 3px;
-  height: 2em;
-  width: 15em;
+  height: 80px;
+  width: 200px;
+}
+
+.minibox{
+  padding: 1.5rem;
+border-radius: 1rem;
+  background-color: rgba(243, 71, 71, 0.4);
+  box-shadow: 0 8px 32px 0 rgba(130, 130, 130, 0.37);
+  width: auto;
+  margin: 4rem auto;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
