--- a/src/components/DashBoard/TableUserReviews/TableUserReviews.module.css
+++ b/src/components/DashBoard/TableUserReviews/TableUserReviews.module.css
@@ -8,3 +8,13 @@
 .gameImg {
     width: 100%;
 }
+
+.minibox{
+    padding: 1.5rem;
+  border-radius: 1rem;
+    background-color: rgba(243, 71, 71, 0.4);
+    box-shadow: 0 8px 32px 0 rgba(130, 130, 130, 0.37);
+    width: auto;
+    margin: 4rem auto;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  }
