--- a/src/components/DashBoard/DashBoard.module.css
+++ b/src/components/DashBoard/DashBoard.module.css
@@ -2,7 +2,8 @@
     border: 3px solid red;
     background-color: rgb(37, 37, 37);
     border-radius: 10px;
-    margin: 1%;
+    margin: auto;
+    padding: auto;
 }
 
 .title {
